# skill-transfer

./: .gitignore  CMakeLists.txt  Readme.md  [Plugins]  package.xml
3d_scans/: b_big_bowl.ply
action/: Averaging.action  FindEdge.action  MoveArm.action
config/: 1-contact.yaml  2-retreat.yaml  contact.yaml  first.giskard  simulator.rviz
experiments/: cutting_1.yaml  scooping_1.yaml  scooping_grains.yaml  scraping_1.yaml
include/skill_transfer/: conversions.h  experiment.h  file_sequence.h  giskard_adapter.h  giskard_utils.h  (+6 more)
info_cache/: b_frying_pan.ply.yaml  b_spatula.ply.yaml
initial_poses/: naive_kinematics_sim.yaml  pr2_cutting_85.yaml  pr2_scooping_b_big_bowl_85.yaml  pr2_scraping.yaml  pr2_scraping_2.yaml  pr2_scraping_3.yaml  pr2_scraping_4.yaml  pr2_scraping_b_big_bowl_80.yaml  pr2_scraping_b_big_bowl_85.yaml  pr2_scraping_b_red_bowl.yaml  pr2_scraping_b_red_bowl_85.yaml
launch/: controller.launch  cutting_task.launch  cutting_world_free_ees.launch  experiment.launch  experiment2.launch  pr2.launch  pr2_scraping.launch  run_experiment.launch  scooping_task.launch  scooping_world.launch  scooping_world_free_ees.launch  scooping_world_viz.launch  scraping_task.launch  scraping_world.launch  scraping_world_free_ees.launch  scraping_world_position_controlled.launch  scraping_world_pr2_viz.launch  scraping_world_viz.launch  simulation.launch  visualization.launch
motion_templates/: free_ees.yaml  pr2.yaml
motions/: cutting_cut.yaml  cutting_position_above.yaml  cutting_pull.yaml  edge_contact.yaml  lift_grains.yaml  liquid_contact.yaml  position_above.yaml  scooping_insert.yaml  scooping_lift.yaml  scooping_position_above.yaml  scooping_scoop.yaml  scrape_off.yaml  scraping_edge_contact.yaml  scraping_position_above.yaml  scraping_scrape_off.yaml
msg/: ObjectFeature.msg  StopCondition.msg
plugins/: GrainsFactoryPlugin.cc  GrainsFactoryPlugin.hh  GripPlugin.cc  GripPlugin.hh  LasagnaFactoryPlugin.cc  LasagnaFactoryPlugin.hh  QGripPlugin.cc  QGripPlugin.hh  StickPlugin.cc  StickPlugin.hh  giskard_visualization_plugin.cpp  position_controller_plugin.cpp  tf_broadcaster_plugin.cpp  velocity_controller_plugin.cpp
point_clouds/: a_bowl.ply  a_bowlchild.ply  a_fryingpan.ply  a_knifekitchen2.ply  a_platebowl.ply  a_siliconespatula.ply  a_spatulawoodgap2.ply  a_spoon.ply  a_woodenspoon1.ply  b_big_bowl.ply  b_coffee_cup.ply  b_coffeecup.ply  b_frying_pan.ply  b_knife.ply  b_pot.ply  b_pot_pan.ply  b_red_bowl.ply  b_red_mug.ply  b_serving_spoon.ply  b_small_blue_knife.ply  b_small_knife.dae  b_small_knife.ply  b_spatula.ply  b_table_knife.ply  b_thin_spatula.ply  b_wildo_bowl.ply
rosinstall/: catkin.rosinstall
setups/: Readme.md  b_big_bowl_b_knife.yaml  b_big_bowl_b_red_mug.yaml  b_big_bowl_b_serving_spoon.yaml  b_big_bowl_b_spatula.yaml  b_big_bowl_b_table_knife.yaml  b_big_bowl_b_thin_spatula.yaml  b_bucket_b_knife.yaml  b_bucket_b_serving_spoon.yaml  b_bucket_b_spatula.yaml  b_bucket_b_tabel_knife.yaml  b_bucket_b_table_knife.yaml  b_bucket_b_thin_spatula.yaml  b_coffee_cup_b_knife.yaml  b_coffee_cup_b_serving_spoon.yaml  b_coffee_cup_b_spatula.yaml  b_coffee_cup_b_table_knife.yaml  b_coffee_cup_b_thin_spatula.yaml  b_frying_pan_b_knife.yaml  b_frying_pan_b_serving_spoon.yaml  b_frying_pan_b_spatula.yaml  b_frying_pan_b_table_knife.yaml  b_frying_pan_b_thin_spatula.yaml  b_pot_b_knife.yaml  b_pot_b_serving_spoon.yaml  b_pot_b_spatula.yaml  b_pot_b_table_knife.yaml  b_pot_b_thin_spatula.yaml  b_red_bowl_b_table_knife.yaml  b_red_mug_b_knife.yaml  b_red_mug_b_serving_spoon.yaml  b_red_mug_b_spatula.yaml  b_red_mug_b_table_knife.yaml  b_red_mug_b_thin_spatula.yaml  b_wildo_bowl_b_knife.yaml  b_wildo_bowl_b_serving_spoon.yaml  b_wildo_bowl_b_spatula.yaml  b_wildo_bowl_b_table_knife.yaml  b_wildo_bowl_b_thin_spatula.yaml  big_bowl_serving_spoon.yaml  (+3 more)
src/: constraint_controller.cpp  constraint_controller_free_ees.cpp  constraint_controller_pr2.cpp  constraint_controller_simulator.cpp  edge_detector.cpp  experiment.cpp  feature_detector.cpp  file_sequence.cpp  force_controller_plugin.cpp  giskard_adapter.cpp  giskard_controller.cpp  knowledge_manager.cpp  position_controller_plugin.cpp  spec.cpp  task.cpp  task_executive.cpp  task_executive2.cpp  test_gazebo_comm.cpp  twist_log.cpp  velocity_controller_plugin.cpp
srv/: DetectObjectFeature.srv  DetectTargetObjectInfo.srv  DetectToolInfo.srv  GetMotionSpec.srv  GetTaskSpec.srv
tasks/: cutting.yaml  cutting_lasagna.yaml  scooping.yaml  scooping_grains.yaml  scraping.yaml  scraping_butter.yaml
worlds/: big_bowl_serving_spoon_v.world  big_bowl_spatula_v.world  big_bowl_spoon_v.world  cutting_b_serving_spoon_p.world  cutting_b_table_knife_p.world  cutting_velocity_controlled.world  scooping.world  scooping_b_big_bowl_b_red_mug_p.world  scooping_b_big_bowl_b_serving_spoon_p.world  scooping_b_big_bowl_b_serving_spoon_v.world  scooping_b_big_bowl_b_spatula_v.world  scooping_b_bucket_b_serving_spoon_v.world  scooping_b_bucket_b_spatula_v.world  scooping_b_coffee_cup_b_serving_spoon_v.world  scooping_b_coffee_cup_b_spatula_v.world  scooping_b_coffee_cup_b_table_knife_v.world  scooping_b_frying_pan_b_serving_spoon_v.world  scooping_b_frying_pan_b_spatula_v.world  scooping_b_pot_b_serving_spoon_v.world  scooping_b_pot_b_spatula_v.world  scooping_b_red_mug_b_serving_spoon_v.world  scooping_b_red_mug_b_spatula_v.world  scooping_b_wildo_bowl_b_serving_spoon_v.world  scooping_b_wildo_bowl_b_spatula_v.world  scooping_velocity_controlled.world  scraping.world  scraping_b_big_bowl_b_knife_v.world  scraping_b_big_bowl_b_serving_spoon_p.world  scraping_b_big_bowl_b_serving_spoon_v.world  scraping_b_big_bowl_b_spatula_p.world  scraping_b_big_bowl_b_spatula_v.world  scraping_b_big_bowl_b_table_knife_72_p.world  scraping_b_big_bowl_b_table_knife_p.world  scraping_b_big_bowl_b_table_knife_v.world  scraping_b_big_bowl_b_thin_spatula_v.world  scraping_b_bucket_b_knife_v.world  scraping_b_bucket_b_serving_spoon_v.world  scraping_b_bucket_b_spatula_v.world  scraping_b_bucket_b_table_knife_v.world  scraping_b_bucket_b_thin_spatula.world  (+32 more)
(+114 files in other folders)
