<?xml version="1.0"?>
<package>
  <name>skill_transfer</name>
  <version>0.0.0</version>
  <description>The skill_transfer package</description>

  <maintainer email="lubiluk@todo.todo">lubiluk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>giskard_core</build_depend>
  <build_depend>giskard_ros_utils</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>giskard_core</run_depend>
  <run_depend>giskard_ros_utils</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
